# trainer-helper-backend

./: .dockerignore  .env  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  m20250208_120900_add_set_table.rs  todo.txt
app/: Cargo.toml
app/src/: api.rs  crud.rs  db.rs  main.rs  seeder.rs  settings.rs
app/src/api/: exercise.rs  person.rs  schemas.rs  timeslot.rs  utils.rs  work_set.rs
app/src/api/schemas/: exercise.rs  timeslot.rs  work_set.rs
app/src/crud/: exercise.rs  models.rs  person.rs  timeslot.rs  work_set.rs
app/src/crud/models/: exercise.rs  timeslot.rs
app/src/settings/: database.rs
backend/: .env  Cargo.toml  Dockerfile  diesel.toml
backend/app/: Cargo.toml
backend/app/migrations/2025-01-19-163726_init/: up.sql
backend/app/src/: crud.rs  db.rs  main.rs  schema.rs
backend/app/src/api/: timeslot.rs
backend/app/src/crud/: timeslot.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  prelude.rs
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs
backend/migrations/2025-01-19-163726_init/: down.sql  up.sql
backend/src/: config.rs  db.rs  main.rs  models.rs  schema.rs
backend/src/crud/: errors.rs  timeslot.rs
entity/: Cargo.toml
entity/src/: entities.rs  prelude.rs
entity/src/entities/: person.rs  (+3 more)
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250131_160240_add_indexes.rs  m20250208_120944_add_set_table.rs  m20250217_102250_add_exercise_table.rs  m20250217_103402_truncate_work_set_table.rs  m20250313_181110_add_user_table.rs
(+3 files in other folders)
