[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.6"
serde_derive = "1.0.217"
serde = "1.0.217"
serde_json = "1.0.138"
datetime = "0.5.2"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "1.1.0" }
chrono = { version = "0.4.39" }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
clap =  { version = "4.5.28", features = ["cargo"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
