[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.6"
serde_derive = "1.0.217"
serde = "1.0.217"
diesel = { version = "2.2.0", features = ["postgres"] }
diesel_migrations = { version = "2.2.0" }
datetime = "0.5.2"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

